--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 <header>
   <button class="hamburger" id="openBtn">☰</button>
   <div style="margin-left:12px;font-weight:1000;color:var(--brand);letter-spacing:.2px;">
-    MENU MOCKUP <span style="font-weight:400; opacity:0.6; font-size:0.8em;">(VER: <span id="ver-display"></span>)</span>
+    MENU MOCKUP <span style="font-weight:400; opacity:0.6; font-size:0.8em;">(VERR: <span id="ver-display"></span>)</span>
   </div>
 </header>
 
