--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <header>
   <button class="hamburger" id="openBtn">☰</button>
-  <div style="margin-left:15px;font-weight:900;color:var(--brand);">MOCKUP TEST B <span style="font-weight:400;opacity:0.6;font-size:0.8em;">(VER: <span id="ver-display"></span>)</span></div>
+  <div style="margin-left:15px;font-weight:900;color:var(--brand);">MOCKUP TEST B <span style="font-weight:400;opacity:0.6;font-size:0.8em;">(VEER: <span id="ver-display"></span>)</span></div>
 </header>
 
 <div id="taskIntroOverlay" class="modalOverlay">
@@ -554,3 +554,4 @@
 </script>
 </body>
 </html>
+
